--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,191 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.font-face-gm {
+  font-family: 'Fleshandblood';
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: 'Fleshandblood';
+  display: flex;
+  justify-content: center;
+  background-color: rgb(15, 15, 15);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+button {
+  font-family: 'Fleshandblood';
+  color: red;
+  background-color: black;
+  padding: 5px;
+}
+
+input {
+  font-family: 'Fleshandblood';
+}
+
+.body-container {
+  display: flex;
+  justify-content: center;
+}
+
+.header {
+  height: 100px;
+  width: 100vw;
+  background-color: black;
+  color: #b9bfbd;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+}
+
+li {
+  margin: 5px;
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+  color: #695c49;
+}
+
+.trophy-card {
+  display: grid;
+  grid-template-areas:
+    'header header header header header header'
+    'left main main menu menu right'
+    'footer footer footer footer footer footer';
+  gap: 10px;
+  border: solid #777c81 3px;
+  background-color: #272c30;
+  margin-bottom: 30px;
+  color: #695c49;
+  width: 90vw;
+}
+
+.trophy-card {
+  display: grid;
+  width: 70vw;
+  height: 150px;
+  margin: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 10px;
+  background-color: #272c30;
+  border: solid #777c81 3px;
+  color: #695c49;
+  border-radius: 5px;
+}
+
+.completed-trophy-card {
+  width: 70vw;
+  height: 150px;
+  margin: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: rgba(119, 119, 119, 0.9);
+  border-radius: 5px;
+  box-shadow: 2px 5px 10px 1px gold;
+}
+
+.trophy-text {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  margin-top: 10px;
+  width: 500px;
+  position: relative;
+}
+
+h3,
+h4 {
+  margin-bottom: 40px;
+  text-align: start;
+}
+
+h3 {
+  margin-top: 10px;
+}
+
+.card-img {
+  height: 60px;
+  margin-left: 10px;
+  background-color: rgb(99, 98, 98);
+}
+
+.trophy-img {
+  height: 45px;
+  width: 40px;
+  margin-bottom: 30px;
+}
+
+.trophy-img-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.completed-btn:active {
+  transform: scale(0.9);
+  background-color: darkblue;
+}
+
+.login-register-body {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 80vh;
 }
 
-.App-link {
-  color: #61dafb;
+.login-register-container {
+  display: flex;
+  justify-content: center;
+  height: 400px;
+  width: 350px;
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-register-form {
+  /* border: solid rebeccapurple; */
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.login-register-input {
+  margin: 20px;
+  width: 200px;
+  border: none;
+  border-bottom: solid 1px;
+  outline: none;
+}
+
+.login-register-submit {
+  margin: 10px;
+}
+
+.logged-in-toggle {
+  display: none;
+}
+
+.logged-out-btn {
+  color: red;
+  background-color: black;
+  padding: 5px;
 }
